welcome.lessons.welcome.bat.bool1.HasTeen.scala.error
hasTeen:1: error: '(' expected but '{' found.
def hasTeen(a:Int, b:Int, c:Int): Boolean = { if ((a>=13)&&(a<=19)) {return true} else if {((b>=13)&&(b<=19)) {return true} else if {((c>=13)&&(c<=19)) {return true} else {return false}}}} 
                                                                                          ^hasTeen:1: error: illegal start of simple expression
def hasTeen(a:Int, b:Int, c:Int): Boolean = { if ((a>=13)&&(a<=19)) {return true} else if {((b>=13)&&(b<=19)) {return true} else if {((c>=13)&&(c<=19)) {return true} else {return false}}}} 
                                                                                                                                                                                           ^